--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -1,7 +1,10 @@
 ---
 id: 5g-on-helium
 hide_title: true
+pagination_label: 5G On Helium
 sidebar_label: Introduction
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium
 ---
 
