--- a/docs/5g-on-helium/mobile-mappers.mdx
+++ b/docs/5g-on-helium/mobile-mappers.mdx
@@ -4,7 +4,7 @@ title: MOBILE Mappers
 pagination_label: MOBILE Mappers
 sidebar_label: MOBILE Mappers
 description: MOBILE Mappers
-# Image:
+image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium/mobile-mappers
 ---
 
