--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -1,7 +1,11 @@
 ---
 id: home
 hide_title: true
+title: Home
+pagination_label: Home
 sidebar_label: Home
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /
 hide_table_of_contents: true
 ---
