--- a/docs/use-the-network/community-projects/community-projects.mdx
+++ b/docs/use-the-network/community-projects/community-projects.mdx
@@ -1,6 +1,10 @@
 ---
 id: community-projects
+title: Community Projects
+pagination_label: Community Projects
 sidebar_label: Community Projects
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/community-projects
 ---
 
