--- a/docs/use-the-network/console-marketplace/console-marketplace.mdx
+++ b/docs/use-the-network/console-marketplace/console-marketplace.mdx
@@ -1,6 +1,10 @@
 ---
 id: console-marketplace
+title: Console Marketplace
+pagination_label: Console Marketplace
 sidebar_label: Console Marketplace
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console-marketplace
 ---
 
