--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -1,6 +1,10 @@
 ---
 id: adding-devices
+title: Adding Devices
+pagination_label: Adding Devices
 sidebar_label: Adding Devices
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/adding-devices
 ---
 
