--- a/docs/use-the-network/console/alerts.mdx
+++ b/docs/use-the-network/console/alerts.mdx
@@ -1,6 +1,10 @@
 ---
 id: alerts
+title: Alerts
+pagination_label: Alerts
 sidebar_label: Alerts
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/alerts
 ---
 
