--- a/docs/use-the-network/console/api.mdx
+++ b/docs/use-the-network/console/api.mdx
@@ -1,6 +1,10 @@
 ---
 id: console-api
-sidebar_label: API
+title: Console API
+pagination_label: Console API
+sidebar_label: Console API
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/api
 ---
 
