--- a/docs/use-the-network/console/cli.mdx
+++ b/docs/use-the-network/console/cli.mdx
@@ -1,6 +1,10 @@
 ---
 id: console-cli
-sidebar_label: CLI
+title: Console CLI
+pagination_label: Console CLI
+sidebar_label: Console CLI
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/cli
 ---
 
