--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -1,6 +1,10 @@
 ---
 id: hosting-providers
+title: Hosting Providers
+pagination_label: Hosting Providers
 sidebar_label: Console Hosting Providers
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/hosting-providers
 ---
 
