--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -1,6 +1,10 @@
 ---
 id: console
+title: Console
+pagination_label: Console
 sidebar_label: Helium Console
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console
 ---
 
