--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -1,6 +1,10 @@
 ---
 id: coverage
+title: Coverage
+pagination_label: Coverage
 sidebar_label: Coverage
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/coverage
 ---
 
