--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -1,6 +1,10 @@
 ---
 id: data-credits
+title: Data Credits
+pagination_label: Data Credits
 sidebar_label: Data Credits
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/data-credits
 ---
 
