--- a/docs/use-the-network/console/debug.mdx
+++ b/docs/use-the-network/console/debug.mdx
@@ -1,6 +1,10 @@
 ---
 id: debug
+title: Debug
+pagination_label: Debug
 sidebar_label: Debug
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/debug
 ---
 
