--- a/docs/use-the-network/console/flows/actions.mdx
+++ b/docs/use-the-network/console/flows/actions.mdx
@@ -1,6 +1,10 @@
 ---
 id: actions
+title: Actions
+pagination_label: Actions
 sidebar_label: Common Flow Actions
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/flows/actions
 ---
 
