--- a/docs/use-the-network/console/flows/flows-faq.mdx
+++ b/docs/use-the-network/console/flows/flows-faq.mdx
@@ -1,6 +1,10 @@
 ---
 id: flows-faq
+title: Flows FAQ
+pagination_label: Flows FAQ
 sidebar_label: Frequently Asked Questions
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/flows/flows-faq
 ---
 
