--- a/docs/use-the-network/console/flows/flows.mdx
+++ b/docs/use-the-network/console/flows/flows.mdx
@@ -1,6 +1,10 @@
 ---
 id: flows
+title: Flows
+pagination_label: Flows
 sidebar_label: Flows
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/flows
 ---
 
