--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -1,6 +1,10 @@
 ---
 id: functions
+title: Functions
+pagination_label: Functions
 sidebar_label: Functions
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/functions
 ---
 
