--- a/docs/use-the-network/console/integrations/adafruitio.mdx
+++ b/docs/use-the-network/console/integrations/adafruitio.mdx
@@ -1,6 +1,10 @@
 ---
 id: adafruitio
+title: AdafruitIO
+pagination_label: AdafruitIO
 sidebar_label: AdafruitIO
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/adafruitio
 ---
 
