--- a/docs/use-the-network/console/integrations/akenza.mdx
+++ b/docs/use-the-network/console/integrations/akenza.mdx
@@ -1,6 +1,10 @@
 ---
 id: akenza
+title: Akenza
+pagination_label: Akenza
 sidebar_label: Akenza
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/akenza
 ---
 
