--- a/docs/use-the-network/console/integrations/aws-iot-core.mdx
+++ b/docs/use-the-network/console/integrations/aws-iot-core.mdx
@@ -1,6 +1,10 @@
 ---
 id: aws-iot-core
+title: AWS IoT Core
+pagination_label: AWS IoT Core
 sidebar_label: AWS IoT Core
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/aws-iot-core
 ---
 
