--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -1,6 +1,10 @@
 ---
 id: azure
+title: Azure IoT Hub
+pagination_label: Azure IoT Hub
 sidebar_label: Azure IoT Hub
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/azure
 ---
 
