--- a/docs/use-the-network/console/integrations/cargo.mdx
+++ b/docs/use-the-network/console/integrations/cargo.mdx
@@ -1,6 +1,10 @@
 ---
 id: cargo
+title: Cargo
+pagination_label: Cargo
 sidebar_label: Cargo
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/cargo
 ---
 
