--- a/docs/use-the-network/console/integrations/datacake.mdx
+++ b/docs/use-the-network/console/integrations/datacake.mdx
@@ -1,6 +1,10 @@
 ---
 id: datacake
+title: Datacake
+pagination_label: Datacake
 sidebar_label: Datacake
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/datacake
 ---
 
