--- a/docs/use-the-network/console/integrations/http.mdx
+++ b/docs/use-the-network/console/integrations/http.mdx
@@ -1,6 +1,10 @@
 ---
 id: http
+title: Http
+pagination_label: HTTP
 sidebar_label: HTTP
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/http
 ---
 
