--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -1,6 +1,10 @@
 ---
 id: integrations
+title: Integrations
+pagination_label: Integrations
 sidebar_label: Integrations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations
 ---
 
