--- a/docs/use-the-network/console/integrations/json-schema.mdx
+++ b/docs/use-the-network/console/integrations/json-schema.mdx
@@ -1,6 +1,10 @@
 ---
 id: json-schema
+title: JSON Schema
+pagination_label: JSON Schema
 sidebar_label: JSON Schema
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/json-schema
 ---
 
