--- a/docs/use-the-network/console/integrations/microshare.mdx
+++ b/docs/use-the-network/console/integrations/microshare.mdx
@@ -1,6 +1,10 @@
 ---
 id: microshare
+title: Microshare
+pagination_label: Microshare
 sidebar_label: Microshare
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/microshare
 ---
 
