--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -1,6 +1,10 @@
 ---
 id: mqtt
+title: MQTT
+pagination_label: MQTT
 sidebar_label: MQTT
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/mqtt
 ---
 
