--- a/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
+++ b/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
@@ -1,6 +1,10 @@
 ---
 id: mydevices-cayenne
+title: MyDevices Cayenne
+pagination_label: MyDevices Cayenne
 sidebar_label: MyDevices Cayenne
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/mydevices-cayenne
 ---
 
