--- a/docs/use-the-network/console/integrations/tago.mdx
+++ b/docs/use-the-network/console/integrations/tago.mdx
@@ -1,6 +1,10 @@
 ---
 id: tago
+title: Tago.IO
+pagination_label: Tago.IO
 sidebar_label: Tago.IO
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/tago
 ---
 
