--- a/docs/use-the-network/console/integrations/ubidots.mdx
+++ b/docs/use-the-network/console/integrations/ubidots.mdx
@@ -1,6 +1,10 @@
 ---
 id: ubidots
+title: Ubidots
+pagination_label: Ubidots
 sidebar_label: Ubidots
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/ubidots
 ---
 
