--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -1,6 +1,10 @@
 ---
 id: labels
+title: Labels
+pagination_label: Labels
 sidebar_label: Labels
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/labels
 ---
 
