--- a/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
+++ b/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
@@ -1,6 +1,10 @@
 ---
 id: migrating-devices
+title: Migrating Devices
+pagination_label: Migrating Devices
 sidebar_label: Migrating Devices
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/migrating-devices
 ---
 
