--- a/docs/use-the-network/console/migrating-devices/ttn-import.mdx
+++ b/docs/use-the-network/console/migrating-devices/ttn-import.mdx
@@ -1,6 +1,10 @@
 ---
 id: ttn-import
+title: TTN Import
+pagination_label: TTN Import
 sidebar_label: TTN Import Migration
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/migrating-devices/ttn-import
 ---
 
