--- a/docs/use-the-network/console/my-account.mdx
+++ b/docs/use-the-network/console/my-account.mdx
@@ -1,6 +1,10 @@
 ---
 id: my-account
+title: My Account
+pagination_label: My Account
 sidebar_label: My Account
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/my-account
 ---
 
