--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -1,6 +1,10 @@
 ---
 id: profiles
+title: Profiles
+pagination_label: Profiles
 sidebar_label: Configuration Profiles
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/profiles
 ---
 
