--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -1,6 +1,10 @@
 ---
 id: quickstart
+title: Quickstart
+pagination_label: Quickstart
 sidebar_label: Quickstart
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/quickstart
 ---
 
