--- a/docs/use-the-network/console/troubleshooting.mdx
+++ b/docs/use-the-network/console/troubleshooting.mdx
@@ -1,7 +1,10 @@
 ---
 id: troubleshooting
 title: Console Troubleshooting
-sidebar_label: Troubleshooting
+pagination_label: Console Troubleshooting
+sidebar_label: Console Troubleshooting
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/troubleshooting
 ---
 
