--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -1,6 +1,10 @@
 ---
 id: users
-sidebar_label: Users and Organizations
+title: Users And Organizations
+pagination_label: Users And Organizations
+sidebar_label: Users And Organizations
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/users
 ---
 
