--- a/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
@@ -1,6 +1,10 @@
 ---
 id: adeunis-mapper
+title: Adeunis Mapper
+pagination_label: Adeunis Mapper
 sidebar_label: Adeunis Mapper
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/coverage-mapping/adeunis-mapper
 ---
 
