--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -1,7 +1,10 @@
 ---
 id: coverage-mapping
-hide_title: true
+title: Coverage Mapping
+pagination_label: Coverage Mapping
 sidebar_label: Coverage Mapping
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/coverage-mapping
 ---
 
