--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -1,6 +1,10 @@
 ---
 id: mappers-quickstart
+title: Mappers Quickstart
+pagination_label: Mappers Quickstart
 sidebar_label: Mappers Quickstart
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/coverage-mapping/mappers-quickstart
 ---
 
