--- a/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
@@ -1,6 +1,10 @@
 ---
 id: mappers-roadmap
+title: Mappers Roadmap
+pagination_label: Mappers Roadmap
 sidebar_label: Mappers Roadmap
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/coverage-mapping/mappers-roadmap
 ---
 
