--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -1,7 +1,10 @@
 ---
 id: development
-hide_title: true
+title: Development
+pagination_label: Development
 sidebar_label: Manufacturers
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development
 ---
 
