--- a/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/platformio.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/platformio.mdx
@@ -1,7 +1,10 @@
 ---
 id: platformio
-hide_title: true
+title: PlatformIO
+pagination_label: PlatformIO
 sidebar_label: PlatformIO
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/platformio
 ---
 
