--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -1,6 +1,10 @@
 ---
 id: devices
+title: Devices
+pagination_label: Devices
 sidebar_label: Devices
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices
 ---
 
