--- a/docs/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device.mdx
+++ b/docs/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device.mdx
@@ -1,7 +1,10 @@
 ---
 id: adeunis-field-test-device
-hide_title: true
+title: Adeunis Field Test Device
+pagination_label: Adeunis Field Test Device
 sidebar_label: Adeunis Field Test Device
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device
 ---
 
