--- a/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
@@ -1,10 +1,10 @@
 ---
 id: oyster
-hide_title: true
 title: Oyster
 description: Ultra-rugged, long-life battery-powered LoRaWAN® GPS asset tracking device
-image: img/use-the-network/devices/ready-to-use/digital-matter/oyster.png
+pagination_label: Oyster
 sidebar_label: Oyster
+image: img/use-the-network/devices/ready-to-use/digital-matter/oyster.png
 slug: /use-the-network/devices/ready-to-use/digital-matter/oyster
 ---
 
