--- a/docs/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.mdx
@@ -1,11 +1,11 @@
 ---
 id: yabby-edge
-hide_title: true
 title: Yabby Edge
+pagination_label: Yabby Edge
+sidebar_label: Yabby Edge
 description:
   Ultra-rugged, Indoor / Outdoor, long-life battery-powered LoRaWAN® GPS asset tracking device
 image: img/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.png
-sidebar_label: Yabby Edge
 slug: /use-the-network/devices/ready-to-use/digital-matter/yabby-edge
 ---
 
