--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -1,7 +1,10 @@
 ---
 id: ready-to-use
-hide_title: true
+title: Ready To Use
+pagination_label: Ready To Use
 sidebar_label: Manufacturers
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/ready-to-use
 ---
 
