--- a/docs/use-the-network/devices/ready-to-use/seeed-sensecap.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-sensecap.mdx
@@ -1,8 +1,11 @@
 ---
 id: seeed-sensecap
-hide_title: true
-sidebar_label: SEEED SenseCAP
-slug: /use-the-network/devices/ready-to-use/SEEED-SenseCAP
+title: Seeed Sensecap
+pagination_label: Seeed Sensecap
+sidebar_label: Seeed Sensecap
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
+slug: /use-the-network/devices/ready-to-use/seeed-sensecap
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
