--- a/docs/use-the-network/devices/ready-to-use/sensedge/senstick-pro.mdx
+++ b/docs/use-the-network/devices/ready-to-use/sensedge/senstick-pro.mdx
@@ -1,10 +1,10 @@
 ---
 id: senstick-pro
-hide_title: true
 title: Senstick Pro
-description: Microclimate Sensor for Harsh Environment
-image: img/use-the-network/devices/ready-to-use/sensedge/senstick-pro.jpg
+pagination_label: Senstick Pro
 sidebar_label: Senstick Pro
+description: Microclimate Sensor For Harsh Environment
+image: img/use-the-network/devices/ready-to-use/sensedge/senstick-pro.jpg
 slug: /use-the-network/devices/ready-to-use/sensedge/senstick-pro
 ---
 
