--- a/docs/use-the-network/devices/ready-to-use/sensedge/senstick-pure.mdx
+++ b/docs/use-the-network/devices/ready-to-use/sensedge/senstick-pure.mdx
@@ -1,10 +1,10 @@
 ---
 id: senstick-pure
-hide_title: true
 title: Senstick Pure
+pagination_label: Senstick Pure
+sidebar_label: Senstick Pure
 description: Indoor Air Quality Sensor
 image: img/use-the-network/devices/ready-to-use/sensedge/senstick-pure.jpg
-sidebar_label: Senstick Pure
 slug: /use-the-network/devices/ready-to-use/sensedge/senstick-pure
 ---
 
