--- a/docs/use-the-network/policies/policies.mdx
+++ b/docs/use-the-network/policies/policies.mdx
@@ -1,6 +1,10 @@
 ---
 id: policies
-sidebar_label: Policies and Terms
+title: Policies And Terms
+pagination_label: Policies And Terms
+sidebar_label: Policies And Terms
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/policies
 ---
 
