--- a/docs/use-the-network/policies/privacy.mdx
+++ b/docs/use-the-network/policies/privacy.mdx
@@ -1,6 +1,10 @@
 ---
 id: privacy
+title: Privacy Policy
+pagination_label: Privacy Policy
 sidebar_label: Privacy Policy
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/policies/privacy
 ---
 
