--- a/docs/use-the-network/policies/terms.mdx
+++ b/docs/use-the-network/policies/terms.mdx
@@ -1,6 +1,10 @@
 ---
 id: terms
-sidebar_label: Terms of Service
+title: Terms Of Service
+pagination_label: Terms Of Service
+sidebar_label: Terms Of Service
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/policies/terms
 ---
 
