--- a/docs/use-the-network/roaming/roaming.mdx
+++ b/docs/use-the-network/roaming/roaming.mdx
@@ -1,6 +1,10 @@
 ---
 id: roaming
+title: Helium Roaming Services
+pagination_label: Helium Roaming Services
 sidebar_label: Helium Roaming Services
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/roaming
 ---
 
