--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -1,6 +1,10 @@
 ---
 id: buy-an-oui
-sidebar_label: Buy an OUI
+title: Buy An OUI
+pagination_label: Buy An OUI
+sidebar_label: Buy An OUI
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server/buy-an-oui
 ---
 
