--- a/docs/use-the-network/run-a-network-server/deploy-console.mdx
+++ b/docs/use-the-network/run-a-network-server/deploy-console.mdx
@@ -1,6 +1,10 @@
 ---
 id: deploy-console
+title: Deploy Console
+pagination_label: Deploy Console
 sidebar_label: Deploy Console
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server/deploy-console
 ---
 
