--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -1,6 +1,10 @@
 ---
 id: router-benchmarking
+title: Router Benchmarking
+pagination_label: Router Benchmarking
 sidebar_label: Router Benchmarking
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server/router-benchmarking
 ---
 
