--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -1,6 +1,10 @@
 ---
 id: run-a-network-server
+title: Run A Network Server
+pagination_label: Run A Network Server
 sidebar_label: Host Your Own Console
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server
 ---
 
