--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -1,6 +1,10 @@
 ---
 id: run-console
+title: Run Console
+pagination_label: Run Console
 sidebar_label: Run Console
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server/run-console
 ---
 
