--- a/docs/use-the-network/setup-a-packet-forwarder.mdx
+++ b/docs/use-the-network/setup-a-packet-forwarder.mdx
@@ -1,6 +1,10 @@
 ---
 id: setup-a-packet-forwarder
-sidebar_label: Build a Packet Forwarder
+title: Build A Packet Forwarder
+pagination_label: Build A Packet Forwarder
+sidebar_label: Build A Packet Forwarder
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/setup-a-packet-forwarder
 ---
 
