--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -1,9 +1,11 @@
 ---
 id: use-the-network
-hide_title: true
-sidebar_label: Introduction
+title: Use The Network
+pagination_label: Use The Network
+sidebar_label: Use The Network
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
