--- a/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
+++ b/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
@@ -1,7 +1,10 @@
 ---
 id: deep-links-and-qr-codes
-title: Deep Links and QR Codes
-sidebar_label: Deep Links and QR Codes
+title: Deep Links And QR Codes
+pagination_label: Deep Links And QR Codes
+sidebar_label: Deep Links And QR Codes
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/deep-links-and-qr-codes
 ---
 
