--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -1,7 +1,10 @@
 ---
 id: discovery
-title: Discovery Mode Guide
-sidebar_label: Discovery Mode Guide
+title: Discovery Mode
+pagination_label: Discovery Mode
+sidebar_label: Discovery Mode
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/discovery-mode
 ---
 
