--- a/docs/wallets/app-wallet/fleet-mode.mdx
+++ b/docs/wallets/app-wallet/fleet-mode.mdx
@@ -1,7 +1,10 @@
 ---
 id: fleet-mode
 title: Fleet Mode
+pagination_label: Fleet Mode
 sidebar_label: Fleet Mode
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/fleet-mode
 ---
 
