--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -1,7 +1,10 @@
 ---
 id: hexagons
 title: Understanding Hexagons
+pagination_label: Hexagons
 sidebar_label: Understanding Hexagons
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/hexagons
 ---
 
