--- a/docs/wallets/app-wallet/rak-hotspot.mdx
+++ b/docs/wallets/app-wallet/rak-hotspot.mdx
@@ -1,7 +1,10 @@
 ---
 id: rak-hotspot-setup
 title: RAK Hotspot Setup
+pagination_label: RAK Hotspot Setup
 sidebar_label: RAK Hotspot Setup
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/rak-hotspot-setup
 ---
 
