--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -1,7 +1,10 @@
 ---
 id: transaction-failures
 title: Transaction Failures
-sidebar_label: Types of Transaction Failures
+pagination_label: Transaction Failures
+sidebar_label: Transaction Failures
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/transaction-failures
 ---
 
