--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -1,7 +1,10 @@
 ---
 id: transfer-hotspot
 title: Transfer Hotspot
+pagination_label: Transfer Hotspot
 sidebar_label: Transfer Hotspot
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/app-wallet/transfer-hotspot
 ---
 
