--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -1,6 +1,10 @@
 ---
 id: cli-wallet
-sidebar_label: CLI
+title: CLI Wallet
+pagination_label: CLI Wallet
+sidebar_label: CLI Wallet
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/cli-wallet
 ---
 
