--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -1,6 +1,10 @@
 ---
 id: ledger
+title: Ledger
+pagination_label: Ledger
 sidebar_label: Ledger
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/ledger
 ---
 
