--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -1,7 +1,10 @@
 ---
 id: twelve-words
 title: Twelve Word Seed Phrase
-sidebar_label: Twelve-Word Seed Phrase
+pagination_label: Twelve Word Seed Phrase
+sidebar_label: Twelve Word Seed Phrase
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/twelve-words
 ---
 
