--- a/docs/wallets/twenty-four-words.mdx
+++ b/docs/wallets/twenty-four-words.mdx
@@ -1,7 +1,10 @@
 ---
 id: twenty-four-words
 title: Twenty-Four Word Seed Phrase
+pagination_label: Twenty-Four Word Seed Phrase
 sidebar_label: Twenty-Four Word Seed Phrase
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets/twenty-four-words
 ---
 
