--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -1,8 +1,10 @@
 ---
 id: wallets
 title: Wallets
-hide_title: true
+pagination_label: Wallets
 sidebar_label: Overview
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /wallets
 ---
 
