--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -1,6 +1,10 @@
 ---
 id: cbrs-radios
+title: CBRS Radios
+pagination_label: CBRS Radios
 sidebar_label: CBRS Radios
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /5g-on-helium/cbrs-radios
 ---
 
