--- a/docs/use-the-network/console/flows/orientation.mdx
+++ b/docs/use-the-network/console/flows/orientation.mdx
@@ -1,6 +1,10 @@
 ---
 id: orientation
+title: Orientation
+pagination_label: Orientation
 sidebar_label: Flows Orientation
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/flows/orientation
 ---
 
