--- a/docs/use-the-network/console/integrations/google-sheets.mdx
+++ b/docs/use-the-network/console/integrations/google-sheets.mdx
@@ -1,6 +1,10 @@
 ---
 id: google-sheets
+title: Google Sheets
+pagination_label: Google Sheets
 sidebar_label: Google Sheets
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/integrations/google-sheets
 ---
 
