--- a/docs/use-the-network/console/migrating-devices/ttn-manual.mdx
+++ b/docs/use-the-network/console/migrating-devices/ttn-manual.mdx
@@ -1,6 +1,10 @@
 ---
 id: ttn-manual
+title: TTN Manual
+pagination_label: TTN Manual
 sidebar_label: TTN Manual Migration
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/console/migrating-devices/ttn-manual
 ---
 
