--- a/docs/use-the-network/coverage-mapping/mappers-api.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-api.mdx
@@ -1,6 +1,10 @@
 ---
 id: mappers-api
+title: Mappers API
+pagination_label: Mappers API
 sidebar_label: Mappers API
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/coverage-mapping/mappers-api
 ---
 
