--- a/docs/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95.mdx
+++ b/docs/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95.mdx
@@ -1,7 +1,10 @@
 ---
 id: adafruit-feather-m0-rfm95
-hide_title: true
+title: Adafruit Feather M0 RFM95
+pagination_label: Adafruit Feather M0 RFM95
 sidebar_label: Adafruit Feather M0 RFM95
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95
 ---
 
