--- a/docs/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruitio.mdx
+++ b/docs/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruitio.mdx
@@ -1,7 +1,10 @@
 ---
 id: adafruitio
-hide_title: true
-sidebar_label: AdafruitIO Guide
+title: AdafruitO
+pagination_label: AdafruitO
+sidebar_label: AdafruitO Guide
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95/adafruitio
 ---
 
