--- a/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/arduino.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/arduino.mdx
@@ -1,7 +1,10 @@
 ---
 id: arduino
-hide_title: true
+title: Arduino
+pagination_label: Arduino
 sidebar_label: Arduino
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/arduino
 ---
 
