--- a/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
+++ b/docs/use-the-network/run-a-network-server/debug-with-sniffer.mdx
@@ -1,6 +1,10 @@
 ---
 id: debug-with-sniffer
+title: Debug With Sniffer
+pagination_label: Debug With Sniffer
 sidebar_label: Debug With Sniffer
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/run-a-network-server/debug-with-sniffer
 ---
 
