--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -1,7 +1,10 @@
 ---
 id: consensus-protocol
-hide_title: true
+title: Consensus Protocol
+pagination_label: Consensus Protocol
 sidebar_label: Consensus Protocol
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/consensus-protocol
 ---
 
