--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -1,7 +1,10 @@
 ---
 id: helium-token
-hide_title: true
+title: Helium Token
+pagination_label: Helium Token
 sidebar_label: Helium Token
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/helium-token
 ---
 
