--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -1,7 +1,10 @@
 ---
 id: mining
-hide_title: true
+title: Mining & Rewards
+pagination_label: Mining & Rewards
 sidebar_label: Mining & Rewards
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/mining
 ---
 
