--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -1,7 +1,10 @@
 ---
 id: oracles
-hide_title: true
+title: Oracles
+pagination_label: Oracles
 sidebar_label: Oracles
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/oracles
 ---
 
