--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -1,7 +1,10 @@
 ---
 id: proof-of-coverage
-hide_title: true
+title: Proof of Coverage
+pagination_label: Proof of Coverage
 sidebar_label: Proof of Coverage
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/proof-of-coverage
 ---
 
