--- a/docs/blockchain/transaction-fees/transaction-fees.mdx
+++ b/docs/blockchain/transaction-fees/transaction-fees.mdx
@@ -1,7 +1,10 @@
 ---
 id: transaction-fees
-hide_title: true
+title: Transaction Fees
+pagination_label: Transaction Fees
 sidebar_label: Transaction Fees
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/transaction-fees
 ---
 
