--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -1,7 +1,10 @@
 ---
 id: community-governance
-hide_title: true
-sidebar_label: Community
+title: Community Governance
+pagination_label: Community Governance
+sidebar_label: Community Governance
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /community-governance
 ---
 
