--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -1,6 +1,10 @@
 ---
 id: community-voting
-sidebar_label: HIP Voting
+title: Community Voting
+pagination_label: Community Voting
+sidebar_label: Community Voting
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /community-voting
 ---
 
