--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -1,7 +1,10 @@
 ---
 id: build-on-network
 title: Build On Network FAQ
-sidebar_label: Build On Network
+pagination_label: Build On Network FAQ
+sidebar_label: Build On Network FAQ
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /faq/build-on-network
 ---
 
