--- a/docs/faq/data-credits.mdx
+++ b/docs/faq/data-credits.mdx
@@ -1,7 +1,10 @@
 ---
 id: data-credits
 title: Data Credits FAQ
-sidebar_label: Data Credits
+pagination_label: Data Credits FAQ
+sidebar_label: Data Credits FAQ
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /faq/data-credits
 ---
 
