--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -1,7 +1,10 @@
 ---
 id: helium-network
 title: Helium Network FAQ
-sidebar_label: Helium Network (New!)
+pagination_label: Helium Network FAQ
+sidebar_label: Helium Network FAQ
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /faq/helium-network
 ---
 
