--- a/docs/faq/hotspot-manufacturers.mdx
+++ b/docs/faq/hotspot-manufacturers.mdx
@@ -1,7 +1,10 @@
 ---
 id: hotspot-manufacturers
 title: Approved Hotspot Manufacturers FAQ
-sidebar_label: Approved Hotspot Manufacturers
+pagination_label: Hotspot Manufacturers FAQ
+sidebar_label: Approved Hotspot Manufacturers FAQ
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /faq/hotspot-manufacturers
 ---
 
