--- a/docs/faq/security.mdx
+++ b/docs/faq/security.mdx
@@ -1,7 +1,10 @@
 ---
 id: security
 title: Security FAQ
-sidebar_label: Security
+pagination_label: Security FAQ
+sidebar_label: Security FAQ
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /faq/security
 ---
 
