--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -1,6 +1,10 @@
 ---
 id: frequency-plans
+title: Frequency Plans
+pagination_label: Frequency Plans
 sidebar_label: Frequency Plans
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /lorawan-on-helium/frequency-plans
 ---
 
