--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -1,7 +1,10 @@
 ---
 id: lorawan-on-helium
-hide_title: true
+title: LoRaWAN On Helium
+pagination_label: LoRaWAN On Helium
 sidebar_label: Introduction
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /lorawan-on-helium
 ---
 
