--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -1,6 +1,10 @@
 ---
 id: lorawan-roaming-on-helium
-sidebar_label: LoRaWAN Roaming on Helium
+title: LoRaWAN Roaming On Helium
+pagination_label: LoRaWAN Roaming On Helium
+sidebar_label: LoRaWAN Roaming On Helium
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /lorawan-on-helium/lorawan-roaming-on-helium
 ---
 
