--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -1,7 +1,10 @@
 ---
 id: packet-purchasing
-hide_title: true
+title: Packet Purchasing
+pagination_label: Packet Purchasing
 sidebar_label: Packet Purchasing
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /blockchain/packet-purchasing
 ---
 
