--- a/docs/lorawan-on-helium/frequency-plans/region-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/region-plans.mdx
@@ -1,6 +1,10 @@
 ---
 id: region-plans
-sidebar_label: Frequency Plans by Region
+title: Region Plans
+pagination_label: Region Plans
+sidebar_label: Region Plans
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /lorawan-on-helium/region-plans
 ---
 
